add venue repository, service and handlers with swagger doc
